@@ -29,6 +29,7 @@ ocsAppManifest := {
           cquiroz(v),
           sraaphorst(v),
           anunez(v),
+          astephens(v),
           with_remote_gogo(v),
             odbtest(v),
               gsodbtest(v),
@@ -373,6 +374,35 @@ def anunez(version: Version) = AppConfig(
     "edu.gemini.util.trpc.name"                  -> "Art's ODB (Test)"
   )
 ) extending List(with_gogo(version), anunez_credentials(version))
+
+// ASTEPHENS
+def astephens(version: Version) = AppConfig(
+  id = "astephens",
+  distribution = List(TestDistro),
+  vmargs = List(
+    "-Xmx2048M",
+    "-XX:MaxPermSize=196M",
+    "-Dedu.gemini.site=north",
+    "-Djava.util.logging.config.file=/home/astephens/ocs/logging.properties",
+    "-Dcron.*.edu.gemini.dbTools.html.ftpHost=localhost",
+    "-Dcron.*.edu.gemini.dbTools.html.ftpDestDir=/home/astephens/ocs/sftp",
+    "-Dcron.reports.edu.gemini.spdb.reports.public.host=localhost",
+    "-Dcron.reports.edu.gemini.spdb.reports.public.remotedir=/home/astephens/ocs/cron",
+    "-Dcron.archive.edu.gemini.dbTools.html.ftpHost=localhost",
+    "-Dcron.archive.edu.gemini.dbTools.html.ftpDestDir=/home/astephens/ocs/cron"
+  ),
+  props = Map(
+    "edu.gemini.smartgcal.host"                  -> "localhost",
+    "edu.gemini.spdb.dir"                        -> "/home/astephens/ocs/spdb/",
+    "edu.gemini.auxfile.root"                    -> "/home/astephens/ocs/auxfile",
+    "edu.gemini.dbTools.tcs.ephemeris.directory" -> "/home/astephens/ocs/ephemeris",
+    "edu.gemini.dataman.gsa.summit.host"         -> "mkofits-lv1new.hi.gemini.edu",
+    "edu.gemini.util.trpc.name"                  -> "Andy's ODB (Test)",
+    "edu.gemini.auxfile.fits.dest"               -> "/gemsoft/var/data/ictd/test/GS@SEMESTER@/@PROG_ID@",
+    "edu.gemini.auxfile.other.dest"              -> "/gemsoft/var/data/finder/GSqueue/Finders-Test/@SEMESTER@/@PROG_ID@",
+    "edu.gemini.auxfile.fits.host"               -> "gsconfig.gemini.edu"
+  )
+) extending List(with_gogo(version), fnussber_credentials(version))
 
 // ODBTEST
 def odbtest(version: Version) = AppConfig(
